--- a/AuctionAce.Api/Views/Shared/_Layout.cshtml
+++ b/AuctionAce.Api/Views/Shared/_Layout.cshtml
@@ -43,6 +43,22 @@
                                 <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Register</span>
                             </a>
                         </li>
+                        <li>
+
+                            <a href="@Url.Action("AddAuction","Auction")" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Add Auction</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">My Auctions</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Wishlist</span>
+                            </a>
+                        </li>
                     </ul>
                     <hr>
                 </div>
@@ -140,125 +156,5 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    //do rozdzielenia do innych plikow z js
-
-
-@*     <script>
-        $(document).ready(function () {
-            $("a:contains('Login')").click(function () {
-                $('#loginModal').modal('show');
-            });
-
-            $("a:contains('Register')").click(function () {
-                $('#registerModal').modal('show');
-            });
-
-            $("#registerLink").click(function () {
-                $('#loginModal').modal('hide');
-                $('#registerModal').modal('show');
-            });
-
-            $("#loginForm").submit(function (event) {
-                event.preventDefault();
-
-                var email = $("#loginEmail").val();
-                var password = $("#loginPassword").val();
-
-                $.ajax({
-                    type: "POST",
-                    url: "/User/LoginAction",
-                    data: {
-                        email: email,
-                        password: password
-                    },
-
-
-
-
-                    success: function (response) {
-                        console.log(response);
-                        if (response.role === 'auctioneer') {
-                            window.location.href = "/Auctioneer/Dashboard";
-                        } else {
-                            window.location.href = "/User/Dashboard";
-                        }
-                    },
-                    error: function (error) {
-                        console.log(error);
-                    }
-
-
-
-
-                });
-            });
-
-            $("#registerForm").submit(function (event) {
-                event.preventDefault();
-
-                var email = $("#registerEmail").val();
-                var password = $("#registerPassword").val();
-                var confirmPassword = $("#registerConfirmPassword").val();
-                var role = $("input[name='userRole']:checked").val();
-
-                $.ajax({
-                    type: "POST",
-                    url: "/User/RegisterAction",
-                    data: {
-                        email: email,
-                        password: password,
-                        confirmPassword: confirmPassword,
-                        role: role
-                    },
-
-
-
-                    success: function (response) {
-                        console.log(response);
-                        $('#registerModal').modal('hide');
-                        if (role === 'auctioneer') {
-                            window.location.href = "/Auctioneer/Dashboard";
-                        } else {
-                            window.location.href = "/User/Dashboard";
-                        }
-                    },
-                    error: function (error) {
-                        console.log(error);
-                    }
-
-
-
-
-                });
-            });
-        });
-    </script> *@
 </body>
 </html>
